@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.003004
+ [Added / runtime requires]
+ - constant
 
 0.003003 2014-09-21T12:42:45Z
  [Added / runtime requires]
