@@ -1,6 +1,12 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.003003, see misc/*.deps* for details
+ - runtime: +1
+
+ [Internals]
+ - Better caching
 
 0.003003 2014-09-21T12:42:45Z
  [Dependencies::Stats]
